<resources>
    <string name="my_list">My list</string>
    <string name="odders">Orders</string>
    <string name="portfolio">Portfolio</string>
    <string name="my_acount">My acount</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gritting">Thank you for using US</string>
    <string name="app_name">D-Trading</string>
    <string name="logout">LogOut</string>
    <string name="Click_here">Click here</string>
    <string name="delete"> Delete My Account </string>
    <string name="funds">Funds</string>
    <string name="defaul_balance"> 0.00</string>
    <string name="share">Share This App With Your Friends</string>
    <string name="add_fund">Add fund</string>
    <string name="stocks_name">Stocks name</string>
    <string name="want_to_buy_any_share">Want to buy any share?</string>
    <string name="go_to_watchlist">Go to WatchList</string>

</resources>